# echo

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
.github/workflows/: nudge.yml
app/: agents.py  agenttask.py  ask.py  bot.py  briefing.py  config.py  devtask.py  docsearch.py  embed.py  events.py  gcal.py  intent.py  interactive.py  jobs.py  llm.py  mailtriage.py  memory.py  news.py  notionsync.py  overview.py  podcast.py  proactive.py  rag.py  review.py  secondbrain.py  shortterm.py  state.py  stats.py  store.py  todoist.py  transcribe.py  transcript.py  tts.py  vault.py  vocab.py
config/: interests.example.yml  vaults.example.yml
scripts/: backfill.py  download_model.sh  export_overview.py  google_auth.py  setup_todoist.py  start.sh  start_whisper_server.sh  test_e2e.py
