[project]
name = "echo_vault"
version = "0.1.0"
description = "Voice-first second brain. Speak ideas, auto-routed to Obsidian vaults."
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[ext]>=21.6",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "feedparser>=6.0.12",
    "matplotlib>=3.10.9",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
